<resources>

    <!-- Strings related to overall Gecko app -->
    <string name="app_name">Gecko</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_close">Close</string>
    <string name="action_about_help">About &amp; Help</string>
    <string name="facebook_app_id">171902163272566</string>
    <string name="fb_login_protocol_scheme">fb171902163272566</string>
    <string name="image_content_description">An image</string>

    <!-- Strings related to register page -->
    <string name="register_title">Create An Account</string>
    <string name="register_name">Screen Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_dob">Date of Birth</string>
    <string name="register_button">Create Account</string>
    <string name="register_failed">Register Failed! Email already registered</string>
    <string name="register_ok_button">OK</string>

    <!-- Strings related to login page -->
    <string name="login_button">Login</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_create_account">New? Sign Up</string>
    <string name="login_failed">Login Failed - Email or Password Incorrect</string>
    <string name="login_retry_button">Retry</string>
    <string name="login_or_text">or</string>

    <!-- Strings related to popups -->
    <string name="input_prompt_labelFor">Enter some text</string>

    <!-- Strings related to adding friend's agenda item to yours popup -->
    <string name="friendItemAdd_activity">Activity:</string>
    <string name="friendItemAdd_date">Date:</string>
    <string name="friendItemAdd_message">Let them know</string>
    <string name="friendItemAdd_add">Add</string>


    <!-- Strings related to home page -->
    <string name="home_top_message">Recommended For You</string>
    <string name="home_list_image_desc">Picture of a recommendation</string>
    <string name="home_toast_list_click">Navigating to the website</string>
    <string name="home_loading">Loading&#8230;</string>

    <!-- Strings related to search preferences page -->
    <string name="search_top_message">Set Your Preferences</string>
    <string name="search_button">Search</string>
    <string name="search_dialog_enter">Enter</string>
    <string name="search_dialog_cancel">Cancel</string>
    <string name="search_previewCost">Up to £</string>
    <string name="search_previewDistanceBefore">&lt;&#160;</string>
    <string name="search_previewDistanceAfter">&#160;km</string>

    <!-- Strings related to profile page -->
    <string name="profile_signIp">Sign up to save items to your Agenda! </string>
    <string name="profileAgenda_empty">Agenda is empty!</string>
    <string name="profileComplete_empty">History is empty!</string>
    <string name="profile_contentDescription">Your Profile Picture</string>
    <string name="profileAgenda_tabName">Agenda</string>
    <string name="profileFriends_tabName">Friends</string>

    <!-- Strings related to friend feed page -->
    <string name="friendFeed_tabName">Feed</string>
    <string name="friendFeed_signUp">Sign up to see the Social Tab!</string>
    <string name="friendFeed_imageDescription">A friend\'s profile picture</string>
    <string name="friendFeed_linkFb">Link Facebook to see your friends!</string>
    <string name="friendFeed_empty">Friend feed is empty :( \n\n Check back again later!</string>
    <string name="friendFeed_loading">Loading&#8230;</string>

    <!-- Strings related to friend detailed item view page -->
    <string name="detailedItemActivity_removed">Item removed by the provider</string>
    <string name="detailedItemActivity_scheduled">Scheduled</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_search_pref">Activity Preferences</string>

    <!-- Strings related to enter date popup -->
    <string name="enterDate_mon">Mon</string>
    <string name="enterData_tue">Tue</string>
    <string name="enterData_wed">Wed</string>
    <string name="enterData_thu">Thu</string>
    <string name="enterData_fri">Fri</string>
    <string name="enterData_sat">Sat</string>
    <string name="enterData_sun">Sun</string>
    <string name="enterData_more">&#8230;</string>

    <!-- Strings related to enter time popup -->
    <string name="enterTime_top">14:00</string>
    <string name="enterTime_7">7</string>
    <string name="enterTime_9">9</string>
    <string name="enterTime_11">11</string>
    <string name="enterTime_13">13</string>
    <string name="enterTime_15">15</string>
    <string name="enterTime_17">17</string>
    <string name="enterTime_19">19</string>
    <string name="enterTime_21">21</string>
    <string name="enterTime_enter">Enter</string>
</resources>