<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.auton.bradley.myfe.MainActivity">

    <item android:id="@+id/action_search"
        android:title="Search"
        android:icon="@drawable/ic_search_grey"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:layout_width="wrap_content" />
    <item
        android:id="@+id/action_preferences"
        android:title="Preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        android:visible="false"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:visible="false"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_grey"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_about_help"
        android:title="@string/action_about_help"
        app:showAsAction="withText"
        />
</menu>
