<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="1"
    android:id="@+id/activity_enter_date"
    tools:context="com.auton.bradley.myfe.EnterDateActivity">


    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/textView"
            android:background="#33111111"
            android:padding="10dp"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_width="60dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/enterDate_mon" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:background="#33111111"
            android:padding="10dp"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_width="60dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/enterData_tue" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:background="#33111111"
            android:padding="10dp"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_width="60dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/enterData_wed" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:background="#33111111"
            android:padding="10dp"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_width="60dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/enterData_thu" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:background="#33111111"
            android:padding="10dp"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_width="60dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/enterData_fri" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:background="#33111111"
            android:padding="10dp"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_width="60dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/enterData_sat" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:background="#33111111"
            android:padding="10dp"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_width="60dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/enterData_sun" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:background="#33111111"
            android:padding="10dp"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:maxLines="1"
            android:layout_width="60dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/enterData_more" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

</GridLayout>