<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/activity_add_friend_agenda"
    android:columnCount="1"
    android:orientation="horizontal"
    tools:context="com.auton.bradley.myfe.AddFriendAgendaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:gravity="end|center"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:text="@string/friendItemAdd_activity"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/fty_activity_text"
            android:maxLines="2"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:gravity="end|center"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:text="@string/friendItemAdd_date"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/fty_date_text"
            android:layout_weight="1"
            android:gravity="start|center"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:id="@+id/fty_checkBox"
            android:checked="true" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:gravity="start|center"
            android:textSize="18sp"
            android:text="@string/friendItemAdd_message"/>
    </LinearLayout>

    <Button
        android:text="@string/friendItemAdd_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_light"
        android:id="@+id/fty_button" />


</GridLayout>